fix tweet cutoff, change max tweets

--- a/app/style.css
+++ b/app/style.css
@@ -45,8 +45,8 @@ display: none;
 #three {
   position: absolute;
   z-index: -1;
-/*  width: 30px;
-  height:30px;*/
+  width: 100%;
+  height:100%;
   top: 0px;
 }
 
